--- a/gradle/macosx.gradle
+++ b/gradle/macosx.gradle
@@ -17,7 +17,7 @@ if (ENV.ARCHITECTURE) {
 def javavmroot = java_home + "/.."
 
 def os_arch = getArch(System.getProperty("os.arch"))
-def target_arch = getArch(ENV.ARCHITECTURE ? ENV.ARCHITECTURE : System.getProperty("os.arch"))
+def target_arch = ENV.ARCHITECTURE ? getArch(ENV.ARCHITECTURE) : os_arch
 
 def macos_arch = "x86_64"
 
