--- a/gradle/linux.gradle
+++ b/gradle/linux.gradle
@@ -138,6 +138,10 @@ tasks.register("linux_natives_compile", Exec) {
     cflags.each {args(it)}
     cflags_pthread.each {args(it)}
 
+    if (target_arch == "ppc64el") {
+        args("-mcpu=powerpc", "-m64")
+    }
+
     ["${java_home}/include", "${java_home}/include/linux", "${java_home}/../include",
      "${java_home}/../include/linux",
      getNativeFolder("generated", "."),
