--- a/gradle/linux.gradle
+++ b/gradle/linux.gradle
@@ -144,11 +144,11 @@ tasks.register("linux_natives_compile", Exec) {
 
     ["${java_home}/include", "${java_home}/include/linux", "${java_home}/../include",
      "${java_home}/../include/linux",
-     getNativeFolder("generated", "."),
-     getNativeFolder("common", "common"),
-     getNativeFolder("common", "common/opengl"),
-     getNativeFolder("linux", "linux"),
-     getNativeFolder("linux", "linux/opengl")
+     getNativeFolder(project,"generated", "."),
+     getNativeFolder(project,"common", "common"),
+     getNativeFolder(project,"common", "common/opengl"),
+     getNativeFolder(project,"linux", "linux"),
+     getNativeFolder(project,"linux", "linux/opengl")
     ].each {
         args("-I" + it)
     }
