fix folder ref in macos build

--- a/gradle/macosx.gradle
+++ b/gradle/macosx.gradle
@@ -131,7 +131,7 @@ tasks.register("macosx_natives_symbols", Exec) {
 
     args(
             file("platform_build/macosx_ant/build-symbol-list").toString(),
-            macos_arch
+            target_arch
     )
 
     //store the output instead of printing to the console:
