--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx1G
 
-version = 2.9.4-legacyfabric.2
+version = 2.9.4+legacyfabric.3
 group = org.lwjgl.lwjgl
 jinput_version = 2.0.5
 
