--- a/build.gradle
+++ b/build.gradle
@@ -217,6 +217,10 @@ allprojects {
             sourceCompatibility = JavaVersion.VERSION_11
             it.options.encoding = "UTF-8"
             it.options.release = 11
+            it.options.compilerArgs += [
+              "--add-exports",
+              "java.desktop/com.sun.media.sound=ALL-UNNAMED"
+            ]
         }
     }
 }
