--- a/build.gradle
+++ b/build.gradle
@@ -216,7 +216,7 @@ allprojects {
             targetCompatibility = JavaVersion.VERSION_11
             sourceCompatibility = JavaVersion.VERSION_11
             it.options.encoding = "UTF-8"
-            it.options.release = 11
+            // it.options.release = 11
             it.options.compilerArgs += [
               "--add-exports",
               "java.desktop/com.sun.media.sound=ALL-UNNAMED"
