--- a/gradle/macosx.gradle
+++ b/gradle/macosx.gradle
@@ -11,7 +11,7 @@ if (ENV.ARCHITECTURE) {
     if (ENV.ARCHITECTURE == "arm64") {
         java_home = ENV.JAVA_HOME_8_ARM64 + "/jre"
     } else {
-        java_home = java_home + "/jre"
+        java_home = ENV.JAVA_HOME_8_X64 + "/jre"
     }
 }
 
