--- a/.github/workflows/build_or_publish.yml
+++ b/.github/workflows/build_or_publish.yml
@@ -113,7 +113,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [natives, natives-debian]
+    needs: [natives]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
