--- a/gradle/macosx.gradle
+++ b/gradle/macosx.gradle
@@ -87,6 +87,7 @@ tasks.register("macosx_natives_compile", Exec) {
                 "-arch",
                 macos_arch,
                 "-mmacosx-version-min=${macos_target}",
+                "-no_weak_imports",
                 "-ObjC",
                 "-O2",
                 "-Wall",
@@ -162,6 +163,7 @@ tasks.register("macosx_natives_link", Exec) {
                 "-arch",
                 macos_arch,
                 "-mmacosx-version-min=${macos_target}",
+                "-no_weak_imports",
                 "-exported_symbols_list",
                 "../lwjgl.symbols",
                 "-dynamiclib",
